1999-03-09  The Rasterman <raster@rasterman.com>
	* esdlib.c, esd.c: added SIGPIPE handlers and wrappign in all 
	  libesd calls so "death" of esd and connection is trapped
	  properly. Also added to auth protocol a "reply" for auth so
	  authorisation is known at socket open time. same for esd.
	  Tested and works. 

1999-02-20  Yo Ric Dude  <ericmit@ix.netcom.com>

	* README, TIPS, TODO: updates
	* configure.in: call it 0.2.8. [and there was much rejoicing...]

1999-02-16  Yo Ric Dude  <ericmit@ix.netcom.com>


	* esd-server.h, esd.c, proto.c: added forced standby tracker for
	greater accuracy in tracking forced standby vs. autostandby modes
	* clients.c: autostandby/standby cpu buglet
	* esd.h, proto.c, esdmgr.c: added ability to get server mode,
	e.g. standby, autostandby, running, etc.
	* many other modules: -Wall clean up

	* players.c, proto.c, samples.c: gracefully handle error
 	conditions from ESD_READ_*, i.e. check return values.

Mon Feb 15 18:19:31 EST 1999 Mandrake <mandrake@mandrake.net>
	* esdlib.c: boy am I getting tired of reading the
	"cannot connect to esound server" error message whenever I don't
	have esd running from that file.  there needs to be a better
	way to dump out this error.  maybe some sort of rotatable message
	file?  who knows?  but not like that.

1999-02-14  Yo Ric Dude  <ericmit@ix.netcom.com>

	* clients.c, esd.c: less brutal audio flushing algorithm.

1999-02-13  Yo Ric Dude  <ericmit@ix.netcom.com>
	
	* esdfile.c, esdlib.c: added and commented out diagnostic code. 
	* esd-server.h, esd.c, players.c, proto.c, samples.c, players.c:
 	add flag to force sample deletion, and force sample deletion only
 	when we shut down the server
	* samples.c, players.c: check for addition of NULL
 	samples/players.
	* players.c: helps if you put the recorder stream's, writeable
	fd_set mask in the proper place within the select call - thx. Chutt

1999-02-10  Yo Ric Dude  <ericmit@ix.netcom.com>
